# ocaml-examples

./: .gitignore
full_webapp/: package-lock.json  package.json  webpack.config.js
full_webapp/client/: bsconfig.json  package-lock.json  package.json
full_webapp/client/lib/js/src/: Main.bs.js
full_webapp/client/lib/js/src/components/: DataList.bs.js  DataTable.bs.js
full_webapp/client/src/: Main.ml
full_webapp/client/src/components/: DataList.re  DataTable.re
full_webapp/web/public/: index.html
full_webapp/web/public/css/: style.css
full_webapp/web/src/: App.ml
jsoo-bonsai-components/: README.md  dune  main.ml  package.json  wdev
jsoo-bonsai-components/public/: index.html
jsoo-bonsai-first-app/: dune  esbuild.config.js  main.ml
jsoo-bonsai-todo/: dune  esbuild.config.js  main.ml  package-lock.json  package.json
jsoo-bonsai-todo/public/: index.html
jsoo-bonsai-todo/public/assets/css/: main.sass
jsoo-helloworld/: dune  esbuild.config.js  main.ml  package-lock.json  package.json
jsoo-helloworld/public/assets/js/: main.js
lang/: dune-project  watch.sh
lang/test/: dune
melange-helloworld/: esbuild.config.js  package.json
melange-helloworld/lib/: dune  lib.re
melange-helloworld/public/: index.html
melange-helloworld/public/assets/js/: main.js
